--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "recharts": "latest",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.7.4",
+    "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
